[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asana-richtext-mcp"
version = "0.1.0"
requires-python = ">=3.12"
description = "Minimal Asana MCP with html_text support for rich text comments"

dependencies = [
    "mcp[cli]>=1.11.0",
    "httpx>=0.27.0",
]
