[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asana-richtext-mcp"
version = "0.2.0"
requires-python = ">=3.12"
description = "Asana MCP server with full task CRUD and rich text support via PAT"

dependencies = [
    "mcp[cli]>=1.11.0",
    "httpx>=0.27.0",
]
